--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
     // Apply the Crashlytics Gradle plugin
-    //apply plugin: 'com.google.firebase.crashlytics'
+    id 'com.google.firebase.crashlytics'
 
 
 }
