--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.my_coach">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -14,13 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.My_Coach">
-        <activity android:name=".sport.SportsProperties.SportsSpecificationsActivity"/>
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".sport.SportsProperties.SportsSpecificationsActivity" />
         <activity android:name=".ui.auth.ForgetPasswordActivity" />
         <activity android:name=".ui.SportsActivity" />
-
         <activity android:name=".Sitting_Activity" />
-        <activity android:name=".ui.auth.Regestration" />
-
+        <activity android:name=".ui.auth.Registration" />
         <activity android:name=".ui.auth.Login" />
         <activity android:name=".ui.Splash">
             <intent-filter>
@@ -33,6 +31,7 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
+
         <service
             android:name=".data.MyFirebaseMessagingService"
             android:exported="false">
