--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.My_Coach">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ProfileActivity"/>
         <activity android:name=".sport.SportsProperties.SportsSpecificationsActivity" />
         <activity android:name=".ui.auth.ForgetPasswordActivity" />
         <activity android:name=".ui.SportsActivity" />
