--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.work:work-runtime:2.3.4'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
 
 
     testImplementation 'junit:junit:4.13.1'
