--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
         <activity android:name=".ui.auth.ForgetPasswordActivity" />
         <activity android:name=".ui.SportsActivity" />
         <activity android:name=".Sitting_Activity" />
-        <activity android:name=".ui.auth.Registration" />
-        <activity android:name=".ui.auth.Login" />
-        <activity android:name=".ui.Splash">
+        <activity android:name=".ui.auth.RegistrationActivity" />
+        <activity android:name=".ui.auth.LoginActivity" />
+        <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
